# ptz-commander

./: .gitignore  CMakeLists.txt  README.md  REFACTORING.md  Runner.cpp  Runner.h  SNAPSHOT_TESTS.md  TEST_EXECUTION_LOG.md  main.cpp
cameras/: Camera.h  CameraManager.cpp  CameraManager.h  CameraState.h  ICamera.h  Preset.h  utils.h
cameras/obsbot/: ObsbotCamera.cpp  ObsbotCamera.h  ObsbotCameraAdapter.cpp  ObsbotCameraAdapter.h
cameras/obsbot/strategies/: ObsbotControlStrategy.h  TailAirStrategy.cpp  TailAirStrategy.h  TinyFamilyStrategy.cpp  TinyFamilyStrategy.h
commands/: Arguments.h  Command.cpp  Command.h  CommandHandler.cpp  CommandHandler.h  HelpCommand.h  ListCommand.cpp  ListCommand.h  MoveCommand.cpp  MoveCommand.h  SelectCommand.cpp  SelectCommand.h  ShowCommand.cpp  ShowCommand.h
commands/camera/: AliasCommand.cpp  AliasCommand.h  HelpCommand.h  ListCommand.cpp  ListCommand.h  MoveCommand.cpp  MoveCommand.h  PushCommand.cpp  PushCommand.h  ShowCommand.cpp  ShowCommand.h
commands/console/: ClearCommand.cpp  ClearCommand.h
commands/preset/: ApplyCommand.cpp  ApplyCommand.h  DiscardCommand.cpp  DiscardCommand.h  HelpCommand.h  ListCommand.cpp  ListCommand.h  LoadCommand.cpp  LoadCommand.h  SaveCommand.cpp  SaveCommand.h  StoreCommand.cpp  StoreCommand.h
commands/snapshot/: ApplyCommand.cpp  ApplyCommand.h  HelpCommand.h  ListCommand.cpp  ListCommand.h
core/: Application.cpp  Application.h  Logger.h
data/: Context.cpp  Context.h
docs/: Grok3-1.txt
include/obsbot/: dev.hpp  devs.hpp
installer/: PTZCommander.msi  PTZCommander.wixobj  PTZCommander.wixpdb  PTZCommander.wxs  build-installer.bat  cab1.cab
lib/obsbot/prev/: libdev.lib
obsbot/: dev.hpp  devs.hpp
